--- a/Bus_Tikit_booking/test-output/old/Default suite/methods-alphabetical.html
+++ b/Bus_Tikit_booking/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9dbc8c">  <td>24/06/03 11:16:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="bus_terminal.bookBusTicket()[pri:0, instance:Bus.bus_terminal@2ea41516]">bookBusTicket</td> 
-  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/06/03 11:15:34</td>   <td>-36461</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;bus_terminal.setUp()[pri:0, instance:Bus.bus_terminal@2ea41516]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
-<tr bgcolor="9dbc8c">  <td>24/06/03 11:17:27</td>   <td>76347</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;bus_terminal.tearDown()[pri:0, instance:Bus.bus_terminal@2ea41516]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480490520</td>   <td></td> </tr>
+<tr bgcolor="b9b6d7">  <td>24/06/04 02:11:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="bus_terminal.bookBusTicket()[pri:0, instance:Bus.bus_terminal@1c9b0314]">bookBusTicket</td> 
+  <td>main@859236022</td>   <td></td> </tr>
+<tr bgcolor="b9b6d7">  <td>24/06/04 02:11:03</td>   <td>-32674</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;bus_terminal.setUp()[pri:0, instance:Bus.bus_terminal@1c9b0314]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@859236022</td>   <td></td> </tr>
+<tr bgcolor="b9b6d7">  <td>24/06/04 02:12:43</td>   <td>67530</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;bus_terminal.tearDown()[pri:0, instance:Bus.bus_terminal@1c9b0314]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@859236022</td>   <td></td> </tr>
 </table>
